js/js.translator/testData/incremental/invalidation/moveFilesBetweenModules/lib1/l12_n.2.kt
inline fun bar(b: Int) = b - 5
